# AI_coding_agent

./: .env.example  .gitignore  agent.toml  eggDoneness.py  main.py  project_paths.py  pyproject.toml
agents/: __init__.py  roles.py  scoped_loop.py
backend/: config.py  main.py
cli/: __init__.py  commands.py  config.py  instant_runner.py  interface.py  interrupt.py  pipeline_confirm.py  retry_prompt.py  selector.py  settings_wizard.py  task_converter.py
core/: compactor.py  config.py  context.py  heal.py  loop.py  token_log.py  undo.py  verification.py
data/: sessions.db  tasks.yaml  utility_tasks.yaml
docker/: Dockerfile.c  Dockerfile.cpp  Dockerfile.go  Dockerfile.javascript  Dockerfile.kotlin  Dockerfile.python  Dockerfile.test  __init__.py  docker-entrypoint.sh  runner.py
docs/: about_prices.md  complexity-classification-baseline.md  example_context_doc.md  initial_dir_str.md  issues.md  model_agnosic.md  multi_coding.md  project-document-after_Phase_2.md  project-document.md  refactor-prompts.md  single-user-guide.md  task_draft_description_comparison.md  user-guide.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
hotline/: notifier.py
llm/: __init__.py  base.py  claude_client.py  gemini_client.py  glm_client.py  ollama_client.py  openai_client.py  rate_limiter.py
memory/: __init__.py  db.py  session.py
metrics/: __init__.py  collector.py
orchestrator/: __init__.py  complexity.py  dependency.py  escalation.py  git_workflow.py  intervention.py  merge_agent.py  milestone.py  model_defaults.py  pipeline.py  quality_gate.py  report.py  run.py  task.py  task_redesign.py  task_utils.py  weekly.py  workspace.py
reports/: __init__.py  execution_brief.py  task_report.py  weekly.py
scripts/: benchmark_thresholds.py  recalculate_costs.py  test_discord_read.py  verify_cache_hit.py  verify_dep_injection.py
structure/: __init__.py  updater.py
tests/: conftest.py  how_to_test.txt  test_api_agnostic.py  test_benchmark_thresholds.py  (+77 more)
(+61 files in other folders)
