[project]
name = "ai-coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "ollama>=0.6.1",
    "openai>=2.26.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "prompt-toolkit>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "google-genai>=1.73.1",
]

[project.scripts]
agent = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
packages   = ["core", "cli", "tools", "llm", "memory", "backend", "orchestrator", "docker", "agents", "hotline", "structure"]

[tool.pytest.ini_options]
# 루트에서 `pytest` 실행 시 scripts/test_discord_read.py 같은 수동 실행 스크립트가
# 수집되지 않도록 수집 범위를 명시적으로 제한한다.
# scripts/ 하위의 test_* 파일은 API 호출을 포함한 인터랙티브 검증 도구이므로
# CI 회귀 스위트에 포함되면 안 된다.
testpaths = ["tests", "backend/tests"]
